# cricket-2004-stroke-preview

./: .gitignore  Cargo.toml  List.txt  README.md
src/: data.rs  main.rs  pitch_canvas.rs  strokes.rs  window.rs
