[package]
name = "stroke_preview"
version = "0.1.0"
authors = ["Rob Eady <robertj.eady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nwg = { version = "1.0.11", package = "native-windows-gui" }
winapi = { version = "0.3.9", features = ["wingdi", "winuser"] }
anyhow = "1.0.40"
nom = "6.1.2"
notify = "4.0.15"
hotwatch = "0.4.5"
toml = "0.5.8"
serde = "1.0.125"
serde_derive = "1.0.125"
